--- a/src/components/weatherSinglCity/views/weather-singleCity.html
+++ b/src/components/weatherSinglCity/views/weather-singleCity.html
@@ -1,15 +1,15 @@
 <section class="weather-singleCity">
 
     <div class="singleCity-infoCity">
-        <span class="singleCity-name">
-            {{::$ctrl.weather.location.city}}
-        </span>,
-        <span>{{::$ctrl.weather.location.country}}</span>
+
+        <cities-switcher></cities-switcher>
+
         <a ng-click="$ctrl.saveCity()" class="btn-addCity">
             <svg viewBox="0 0 24 24">
                 <path d="M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M13,7H11V11H7V13H11V17H13V13H17V11H13V7Z" />
             </svg>
         </a>
+
     </div>
 
     <i class="icon-weather wi" ng-class="::$ctrl.weatherIcon"></i>
@@ -38,7 +38,6 @@
                     <span class="weather-maxTempDay">{{::value.maxTempDay}}°</span>
                     <span class="weather-minTempDay">{{::value.minTempDay}}°</span>
                 </div>
-
             </li>
         </ul>
     </section>
